Fixed due date error being too big for the flashed text box

--- a/portal/static/styles.css
+++ b/portal/static/styles.css
@@ -368,6 +368,7 @@ p.flash {
   box-shadow: 2px 2px 5px black;
   color: red;
   display: flex;
+  font-size: 16px;
   font-weight: bold;
   height: 3rem;
   justify-content: center;
